--- a/sqlalchemy.ipynb
+++ b/sqlalchemy.ipynb
@@ -678,7 +678,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Optional Challenge Assignment"
+    "## Bonus Challenge Assignment"
    ]
   },
   {
